--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
 <head>
     <meta charset="UTF-8">
     <title>Health Manager</title>
@@ -68,9 +68,6 @@
     </style>
 
     <script>
-
-
-        }
 
 
     </script>
